<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black" >

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/persistent_boggle"
        android:textColor="@color/white"
        android:textSize="30dp" />

    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:paddingTop="30dp"
        android:text="@string/user_name"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/userfield"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/username"
        android:inputType="text" />

    <TextView
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/userfield"
        android:text="@string/password"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/passfield"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/passfield"
        android:layout_centerHorizontal="true"
        android:text="@string/submit" />

    <Button
        android:id="@+id/about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/password"
        android:layout_marginBottom="16dp"
        android:text="About" />

    <Button
        android:id="@+id/ack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/about"
        android:layout_alignBottom="@+id/about"
        android:layout_centerHorizontal="true"
        android:text="Acknowledgements" />

    <Button
        android:id="@+id/rules"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/ack"
        android:layout_alignBottom="@+id/ack"
        android:layout_toRightOf="@+id/ack"
        android:text="Rules" />

</RelativeLayout>
