<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/word"
        android:layout_centerHorizontal="true"
        tools:context=".Game" />
    
      <GridView xmlns:android="http://schemas.android.com/apk/res/android" 
	    android:id="@+id/gridview"
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content"
	    android:columnWidth="60dp"
	    android:numColumns="4"
	    android:verticalSpacing="10dp"
	    android:horizontalSpacing="10dp"
	    android:stretchMode="columnWidth"
	    android:gravity="center"
	    android:layout_below="@id/word"
/>

      <LinearLayout 
          android:orientation="horizontal"
          android:layout_height="wrap_content"
          android:layout_width="fill_parent"
          android:layout_below="@id/gridview"
          android:layout_centerHorizontal="true"
          android:id="@+id/linear">
          
      <ImageView android:src="@drawable/pause"
          android:contentDescription="@string/pause"
          android:layout_width="50dp"
          android:layout_height="50dp"
          android:id="@+id/pause"/>   
           
      <Button 
          android:text="@string/add_word"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:id="@+id/addword"
          />
      
      <TextView android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:id="@+id/timer"/>
      
      </LinearLayout>
      
      <TextView android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/score"
                android:text="@string/score"
                android:layout_below="@+id/linear" />
      
      <TextView android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/allWords"
                android:layout_below="@+id/score" />
</RelativeLayout>
